--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -13,28 +13,41 @@ img {
     width: 310px;
 }
 
-.header a {
-    text-decoration: none;
-    color: var(--primary);
-    display: inline-block;
-    margin-right: 20px;
-    
-    color: #000;
+.header ul{
+    height: 100px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    list-style: none;
+    padding: 0 100px;
+    justify-content: space-around;
 }
 
-.header a::before {
-    
-        content: '';
-        display: block;
-        width: 0;
-        height: 1px;
-        background: #1a365e;;
-        transition: width .3s;
-        
-        
+.header li {
+    cursor: pointer;
+    display: block;
+    height: 100%;
+    margin-right: 30px;
+    font-size: 16px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    color: var(--primary);
+    transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
   }
-  
-  .header a:hover::before {
+
+  .header li:after {
+    content: "";
+    position: absolute;
+    width: 0%;
+    height: 2px;
+    display: block;
+    transition: all 0.3s ease;
+    bottom: 35%;
+  }
+
+  .header li:hover::after {
     width: 100%;
-    color: #1a365e;
+    height: 2px;
+    background-color: var(--primary);
   }
