--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
     width: 100%;
-    height: 400px;
+    height: 300px;
     background-color: var(--soft-beige);
     display: flex;
     justify-content: space-around;
@@ -10,6 +10,17 @@
 img {
     width: 250px;
 }
+
+.footer div {
+  width: 250px;
+  padding: 10px;
+}
+
+.footer p {
+  padding-top: 24px;
+}
+
+
 
 .footer ul{
     height: 120px;
@@ -52,3 +63,5 @@ img {
     height: 2px;
     background-color: var(--primary);
   }
+
+  
