--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,2 +1,9 @@
-
+.container main {
+    background-image: url(../../../Imagens/Imagens/design-de-interiores-minimalista-novo.jpg);
+    width: 100%;
+    height: 1100px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+}
 
