--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,10 +1,15 @@
 .footer {
     width: 100%;
     height: 300px;
-    background-color: var(--soft-beige);
+    background-image: url(../../../Imagens/Imagens/Footer.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    color: var(--primary);
+    font-weight: 500;
+
 }
 
 img {
