--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
     width: 100%;
-    height: 300px;
-    background-image: url(../../../Imagens/Imagens/Footer.jpg);
+    height: 296px;
+    background-image: url(../../../Imagens/Imagens/footer-novo-menor.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
