--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,13 +7,17 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    
 }
 
 img {
     width: 310px;
 }
 
-.header ul{
+
+
+.header nav{
+    text-decoration-color: none;
     height: 100px;
     font-weight: 600;
     display: flex;
@@ -21,9 +25,13 @@ img {
     list-style: none;
     padding: 0 100px;
     justify-content: space-around;
+    
 }
 
-.header li {
+
+
+.header :link {
+    text-decoration: none;
     cursor: pointer;
     display: block;
     height: 100%;
@@ -36,7 +44,8 @@ img {
     transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
   }
 
-  .header li:after {
+  .header :link:after {
+    text-decoration: none;
     content: "";
     position: absolute;
     width: 0%;
@@ -46,8 +55,27 @@ img {
     bottom: 35%;
   }
 
-  .header li:hover::after {
+  .header :link:hover::after {
     width: 100%;
     height: 2px;
     background-color: var(--primary);
   }
+
+  a:link {
+    color: var(--primary);
+ }
+ 
+ /* link que foi visitado */
+ a:visited {
+     color: var(--primary);
+ }
+ 
+ /* mouse over */
+ a:hover {
+     color: var(--primary);
+ }
+ 
+ /* link selecionado */
+ a:active {
+     color: var(--primary);
+ }
