--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -2,47 +2,42 @@
     color: var(--primary);
 }
 
-.container main {
+.main {
     background-image: url(../../../Imagens/Imagens/design-de-interiores-minimalista-novomenor.jpg);
     width: 100%;
     height: 1000px;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     display: flex;
     justify-content: center;
-    
-    
 }
 
-
-
-.container main h1 {
+.main h1 {
     width: 1200px;
+    height: 300px;
     padding-top: 150px;
     text-align: center;
-    font-size: 70px;
+    font-size: 5rem;
     font-weight: 200;
-    
-
 }
 
-
-.container div {
+.div {
     background-image: url(../../../Imagens/Imagens/container-span.jpg);
     width: 100%;
     height: 600px;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    
-    
+    flex-direction: row;
 }
 
-.container span {
-    background: rgba( 255, 255, 255, 0.1 );
-    backdrop-filter: blur( 2px );
+.div span {
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(2px);
     border-radius: 10px;
     width: 550px;
     height: 400px;
@@ -51,21 +46,257 @@
     justify-content: space-around;
     flex-direction: column;
     padding: 20px;
-    
+    margin: 20px;
 }
 
-.container span h2 {
+.div span h2 {
     align-items: center;
     justify-content: space-around;
     text-align: center;
     font-weight: 400;
-    font-size: 32px;
+    font-size: 2rem;
+    padding: 10px;
 }
 
-.container span p {
-    
+.div span p {
+
     text-align: center;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 1.3rem;
+    padding: 10px;
 }
 
+@media (max-width: 1280px) {
+    
+    .main h1 {
+        width: 1200px;
+        height: 300px;
+        padding-top: 125px;
+        text-align: center;
+        font-size: 4rem;
+        font-weight: 200;
+    }
+
+    .div {
+        padding: 20px 20px 200px 20px;
+    }
+
+    .div span {
+        height: 500px;
+    }
+    
+    .div span h2 {
+        align-items: center;
+        justify-content: space-around;
+        text-align: center;
+        font-weight: 500;
+        font-size: 1.5rem;
+        padding: 10px;
+    }
+    
+    .div span p {
+    
+        text-align: center;
+        font-weight: 400;
+        font-size: 1.1rem;
+        padding: 10px;
+    }
+}
+
+@media (max-width: 960px) {
+    
+    .main h1 {
+        width: 1200px;
+        height: 300px;
+        padding-top: 100px;
+        text-align: center;
+        font-size: 4rem;
+        font-weight: 200;
+    }
+    
+    .div {
+        background-image: url(../../../Imagens/Imagens/container-span.jpg);
+        width: 100%;
+        height: 600px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: column;
+      
+        
+    }
+    
+    .div span {
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(2px);
+        border-radius: 10px;
+        width: 550px;
+        height: 400px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: column;
+        padding: 20px;
+        margin: 20px 
+    }
+    
+    .div span h2 {
+        align-items: center;
+        justify-content: space-around;
+        text-align: center;
+        font-weight: 400;
+        font-size: 2rem;
+        padding: 10px;
+    }
+    
+    .div span p {
+    
+        text-align: center;
+        font-weight: 400;
+        font-size: 1.3rem;
+        padding: 10px;
+    }
+}
+
+@media (max-width: 640px) {
+    .container {
+        color: var(--primary);
+    }
+    
+    .main {
+        background-image: url(../../../Imagens/Imagens/design-de-interiores-minimalista-novomenor.jpg);
+        width: 100%;
+        height: 1000px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .main h1 {
+        width: 1200px;
+        height: 300px;
+        padding-top: 150px;
+        text-align: center;
+        font-size: 5rem;
+        font-weight: 200;
+    }
+    
+    .div {
+        background-image: url(../../../Imagens/Imagens/container-span.jpg);
+        width: 100%;
+        height: 600px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: row;
+    }
+    
+    .div span {
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(2px);
+        border-radius: 10px;
+        width: 550px;
+        height: 400px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: column;
+        padding: 20px;
+        margin: 20px;
+    }
+    
+    .div span h2 {
+        align-items: center;
+        justify-content: space-around;
+        text-align: center;
+        font-weight: 400;
+        font-size: 2rem;
+        padding: 10px;
+    }
+    
+    .div span p {
+    
+        text-align: center;
+        font-weight: 400;
+        font-size: 1.3rem;
+        padding: 10px;
+    }
+}
+
+@media (max-width: 320px) {
+    .container {
+        color: var(--primary);
+    }
+    
+    .main {
+        background-image: url(../../../Imagens/Imagens/design-de-interiores-minimalista-novomenor.jpg);
+        width: 100%;
+        height: 1000px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .main h1 {
+        width: 1200px;
+        height: 300px;
+        padding-top: 150px;
+        text-align: center;
+        font-size: 5rem;
+        font-weight: 200;
+    }
+    
+    .div {
+        background-image: url(../../../Imagens/Imagens/container-span.jpg);
+        width: 100%;
+        height: 600px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: row;
+    }
+    
+    .div span {
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(2px);
+        border-radius: 10px;
+        width: 550px;
+        height: 400px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: column;
+        padding: 20px;
+        margin: 20px;
+    }
+    
+    .div span h2 {
+        align-items: center;
+        justify-content: space-around;
+        text-align: center;
+        font-weight: 400;
+        font-size: 2rem;
+        padding: 10px;
+    }
+    
+    .div span p {
+    
+        text-align: center;
+        font-weight: 400;
+        font-size: 1.3rem;
+        padding: 10px;
+    }
+}
