--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,68 +1,125 @@
 .footer {
-    width: 100%;
-    height: 296px;
-    background-image: url(../../../Imagens/Imagens/footer-novo-menor.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: var(--primary);
-    font-weight: 500;
+  width: 100%;
+  height: 296px;
+  background-image: url(../../../Imagens/Imagens/footer-novo-menor.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: var(--primary);
+  font-weight: 500;
+  font-size: 1rem;
+  flex-direction: column;
+
+}
+
+.content {
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+  gap: 50px;
+  flex-direction: row;
 
 }
 
 img {
-    width: 250px;
+  width: 250px;
 }
 
 .footer p {
   display: flex;
-  padding-bottom: 10px;
   gap: 10px;
 }
 
-.footer ul{
-    height: 120px;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    list-style: none;
-    width: 100%;
-    justify-content: space-around;
-    flex-direction: column;
+.links ul {
+  width: 30px;
+  height: 120px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  list-style: none;
+  width: 100%;
+  justify-content: space-around;
+  flex-direction: column;
+  padding: 30px;
 }
 
-.footer li {
-    
-    padding-bottom: 20px;
-    gap: 20px;
-    cursor: pointer;
-    display: block;
-    height: 100%;
-    width: auto;
-    font-size: 16px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    color: var(--primary);
-    transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
-  }
+.links li {
 
-  .footer li:after {
-    content: "";
-    position: absolute;
-    width: 0%;
-    height: 2px;
-    display: block;
-    transition: all 0.3s ease;
-    bottom: 35%;
-  }
+  padding-bottom: 20px;
+  gap: 20px;
+  cursor: pointer;
+  display: block;
+  height: 100%;
+  width: auto;
+  font-size: 16px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  color: var(--primary);
+  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
 
-  .footer li:hover::after {
-    width: 100%;
-    height: 2px;
-    background-color: var(--primary);
-  }
+.links li:after {
+  content: "";
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  display: block;
+  transition: all 0.3s ease;
+  bottom: 35%;
+}
 
-  
+.links li:hover::after {
+  width: 100%;
+  height: 2px;
+  background-color: var(--primary);
+}
+
+.icons ul {
+  width: 300px;
+  height: 120px;
+  font-weight: 600;
+  display: flex;
+  align-items: start;
+  list-style: none;
+  width: 100%;
+  justify-content: space-around;
+  flex-direction: column;
+  padding: 30px;
+}
+
+.icons li {
+  padding-bottom: 10px;
+}
+
+.dir ul {
+  width: 300px;
+  height: 120px;
+  font-weight: 600;
+  display: flex;
+  align-items: start;
+  list-style: none;
+  width: 100%;
+  justify-content: space-around;
+  flex-direction: column;
+  padding: 30px;
+}
+
+.copy {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  gap: 10px;
+}
+
+@media (max-width: 1280px) {}
+
+@media (max-width: 960px) {}
+
+@media (max-width: 640px) {}
+
+@media (max-width: 320px) {}
