--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,47 +4,47 @@
     background-image: url(../../../Imagens/Imagens/header-novo-menor.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    
+
 }
 
-img {
+.img {
+    padding-left: 30px;
     width: 310px;
 }
 
-
-
-.header nav{
+.nav {
     text-decoration-color: none;
     height: 100px;
+    font-size: 1rem;
     font-weight: 600;
     display: flex;
     align-items: center;
     list-style: none;
-    padding: 0 100px;
+    padding: 0 30px;
     justify-content: space-around;
-    
+
 }
 
-
-
-.header :link {
+.nav :link {
     text-decoration: none;
     cursor: pointer;
     display: block;
     height: 100%;
     margin-right: 30px;
-    font-size: 16px;
+    font-size: 1rem;
     position: relative;
     display: flex;
     align-items: center;
     color: var(--primary);
     transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
-  }
 
-  .header :link:after {
+}
+
+.nav :link:after {
     text-decoration: none;
     content: "";
     position: absolute;
@@ -53,29 +53,119 @@ img {
     display: block;
     transition: all 0.3s ease;
     bottom: 35%;
-  }
 
-  .header :link:hover::after {
+}
+
+.nav :link:hover::after {
     width: 100%;
     height: 2px;
     background-color: var(--primary);
-  }
 
-  a:link {
+}
+
+a:link {
     color: var(--primary);
- }
- 
- /* link que foi visitado */
- a:visited {
-     color: var(--primary);
- }
- 
- /* mouse over */
- a:hover {
-     color: var(--primary);
- }
- 
- /* link selecionado */
- a:active {
-     color: var(--primary);
- }
+}
+
+/* link que foi visitado */
+a:visited {
+    color: var(--primary);
+}
+
+/* mouse over */
+a:hover {
+    color: var(--primary);
+}
+
+/* link selecionado */
+a:active {
+    color: var(--primary);
+}
+
+@media (max-width: 1280px) {
+
+    .img {
+        padding-left: 30px;
+        width: 310px;
+    }
+
+    .nav {
+        text-decoration-color: none;
+        height: 100px;
+        font-size: 1rem;
+        font-weight: 600;
+        display: flex;
+        align-items: center;
+        list-style: none;
+        padding: 0 30px;
+        justify-content: space-around;
+
+    }
+
+}
+
+@media (max-width: 960px) {
+
+    .img {
+        padding-left: 30px;
+        width: 290px;
+    }
+
+    .nav {
+        text-decoration-color: none;
+        height: 100px;
+        font-size: 1rem;
+        font-weight: 600;
+        display: flex;
+        align-items: center;
+        list-style: none;
+        padding: 0 30px;
+        justify-content: space-around;
+
+    }
+
+}
+
+@media (max-width: 640px) {
+
+    .img {
+        padding-left: 30px;
+        width: 270px;
+    }
+
+    .nav {
+        text-decoration-color: none;
+        height: 100px;
+        font-size: 0.750rem;
+        font-weight: 600;
+        display: none;
+        align-items: center;
+        list-style: none;
+        padding: 0 100px;
+        justify-content: space-around;
+
+    }
+
+}
+
+@media (max-width: 320px) {
+
+    .img {
+        padding-left: 30px;
+        width: 230px;
+    }
+
+    .nav {
+        text-decoration-color: none;
+        height: 100px;
+        font-size: 1rem;
+        font-weight: 600;
+        display: none;
+        align-items: center;
+        list-style: none;
+        padding: 0 100px;
+        justify-content: space-around;
+
+    }
+
+}
