--- a/src/pages/Sobre/Sobre.module.css
+++ b/src/pages/Sobre/Sobre.module.css
@@ -8,6 +8,7 @@
     height: 1000px;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,6 +42,7 @@
     height: 600px;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     display: flex;
     align-items: center;
     justify-content: space-around;
